# robobench.experiments

moos-ivp-m2/: CMakeLists.txt  moos-ivp-m2-berta.ini
moos-ivp-m2/missions/m2_berta/: meta_shoreside.moos  plug_pHelmIvP.moos
morse-CNM-1.2.1/: CMakeLists.txt  morse-profile-CNM-1.2.1.ini
pr2-interactive-manipulation/: CMakeLists.txt  pr2-interactive-manipulation.ini  pr2-interactive-navigation.ini
pr2-interactive-manipulation/data/: pr2_im_nav_command.bag  wg_collada.urdf  wg_collada_world.launch
pr2-interactive-manipulation/data/config/: pr2_im_gazebo.rviz
pr2-interactive-manipulation/data/maps/: willowMap2_50mm.yaml  willowMap50mm_wider_door.yaml  willowMapM1_50mm.yaml
pr2-interactive-manipulation/data/msgs/: grasp_interactive_object.yml  initial_pose.yml  look_down.yml  move_base.yml  segment_table.yml  tuck_arms.yml  untuck_arms.yml
pr2-interactive-manipulation/data/urdf/: coke_can.urdf  table.urdf.xacro
reem-simulation/: CMakeLists.txt  reem-grasping-simulation-profile.ini  reem-patrolling-simulation-profile.ini
strands-patrolling-simulation-nightly/: CMakeLists.txt  strands-patrolling-simulation-profile.ini
tools/: CMakeLists.txt  finish_loudly.bash  kill_operf.bash  send_goal
tum-simulation/: CMakeLists.txt  tum-ardone-profile.ini  tum-ardrone-profile.ini
tum-simulation/data/: demo_commands.txt
